2005-04-20  Tom Tromey  <tromey@redhat.com>

	* java/math/BigInteger.java (TEN): New constant.
	* java/math/BigDecimal.java (ZERO, ONE): Now public.
	(TEN): New constant.

2005-04-20  Tom Tromey  <tromey@redhat.com>

	* java/lang/Short.java (reverseBytes): Argument is 'short'.

2005-04-20  Tom Tromey  <tromey@redhat.com>

	* java/lang/ThreadLocal.java (remove): New method.

2005-04-20  Tom Tromey  <tromey@redhat.com>

	* java/util/DuplicateFormatFlagsException.java: New file.
	* java/util/FormatFlagsConversionMismatchException.java: New
	file.
	* java/util/FormatterClosedException.java: New file.
	* java/util/IllegalFormatCodePointException.java: New file.
	* java/util/IllegalFormatConversionException.java: New file.
	* java/util/UnknownFormatFlagsException.java: New file.
	* java/util/UnknownFormatConversionException.java: New file.
	* java/util/MissingFormatWidthException.java: New file.
	* java/util/MissingFormatArgumentException.java: New file.
	* java/util/InputMismatchException.java: New file.
	* java/util/IllegalFormatWidthException.java: New file.
	* java/util/IllegalFormatPrecisionException.java: New file.
	* java/util/IllegalFormatFlagsException.java: New file.
	* java/util/IllegalFormatException.java: New file.

2005-04-19  Sven de Marothy  <sven@physto.se>

	* java/util/Calendar.java:
	(compareTo(java.util.Calendar)): Handle instability
	in obtaining the milliseconds value.
	
2005-04-17  Roman Kennke  <roman@kennke.org>

	* javax/swing/text/SimpleAttributeSet.java
	(addAttribute): Removed null pointer check.
	* javax/swing/text/StyleContext.java
	(NamedStyle.setResolveParent): Added null pointer check.

2005-04-17  Roman Kennke  <roman@kennke.org>

	* examples/gnu/classpath/exammples/swing/Demo.java:
	Print a short summary for available values for the property
	swing.defaultlaf.
	Set MetalLookAndFeel as default.
	Pulled out GNULookAndFeel so that it is accessible.
	* examples/gnu/classpath/exammples/swing/GNULookAndFeel.java: